# avengine

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  readme.txt  topic.txt
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: a1b2c3d4e5f6_add_users_table.py  c3d4e5f6a7b8_add_user_id_and_daily_limit.py  ecc5d3e75be2_initial.py
frontend/: index.html
src/: main.py
src/agents/matching/: matcher.py
src/agents/rendering/: editor.py  ffmpeg_renderer.py  moviepy_assembler.py  timeline_calculator.py
src/agents/script/: crew.py  extractor.py
src/agents/sourcing/: pexels_sourcer.py  pixabay_sourcer.py  playwright_extractor.py  proxy_pool.py  rss_monitor.py  tasks.py  worker.py  ytdlp_extractor.py
src/api/dependencies/: auth.py
src/api/middleware/: logging.py  rate_limit.py  request_id.py  security_headers.py
src/api/routers/: auth.py  health.py  users.py  video.py  ws.py
src/core/: celery_app.py  config.py  database.py  events.py  exceptions.py  logging.py  models.py  redis_bus.py  security.py
src/pipeline/: checkpoint.py  graph.py  publisher.py  state.py  tasks.py
src/schemas/: api.py  auth.py  pipeline.py
src/services/elevenlabs/: client.py
src/services/twelvelabs/: client.py
src/services/vector_db/: qdrant_service.py
src/utils/: storage.py
